# pets

./: 150 (учебная задача, которую хочешь переписать в ооп).cpp  README.md
Python/: numpy, matplotlib.pyplot, yfinance.ipynb  numpy, pandas, sklearn.ipynb
Qt/: .gitignore  README.md
Qt/hello_world/: CMakeLists.txt  README.md  main.cpp
Qt/messenger/: README.md
Бот/: .gitignore  README.md  firsteverbot.py  links_by_names_categories.txt  names_categories.txt  quotes.txt
Бот (+парсинг)/: firsteverbot.py
ООП/1 - Односвязный список/: linkedlist_main.cpp
ООП/2 - Двусвязный список/: main.cpp
ООП/2_2_1/: Test.cpp  Test.h
ООП/2_2_1 Доступ к элементам объекта/: main.cpp
ООП/2_2_2/: Test.cpp  Test.h  main.cpp
ООП/3/: class_w_a.h  main.cpp
ООП/3_1_2 - friend-функция/: main.cpp
ООП/3_1_2 Оператор присвоения объектов/: class_w_a.cpp  main.cpp
ООП/4_1_1 Реализация наследования/: Base.cpp  Base.h  Derived.cpp  Derived.h  main.cpp
ООП/4_1_2 Иерархия наследования/: lvl_1.cpp  lvl_1.h  lvl_2.cpp  lvl_2.h  lvl_3.cpp  main.cpp
ООП/4_1_2 Иерархия наследования (приведение типов)/: input.txt  lvl_3.h  lvl_4.cpp  lvl_4.h  main.cpp  output.txt
ООП/4_1_3 Множественное наследование/: output.txt
ООП/4_1_3 Множественное наследование (виртуальное в том числе)/: main.cpp
ООП/9_1_1 Перегрузка операций/: main.cpp
Парсинг/: my_first_parser.py
Системы Искусственного интеллекта/: 3 - Классификация.ipynb  4 - Регрессия.ipynb  5 - Деревья_решений.ipynb  6 - Эволюционные_методы. Генетические_алгоритмы.ipynb  7 - Нейронные сети.ipynb  8 - Кластеризация.ipynb
(+123 files in other folders)
